--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -6,10 +6,18 @@
    "source": [
     "Milestone 1:\n",
     "\n",
+    "from https://ubc-dsci.github.io/dsci-310-student/milestone1.html\n",
+    "\n",
     "1. Draft a team work contract\n",
     "2. Set-up a public GitHub repository (or a private one, adding ttimbers and GiuseppeTT as collaborators with read access) under the DSCI-310 organization\n",
     "3. Select a data analysis project to work with\n",
     "4. Create an appropriate file and directory structure for a data analysis project\n",
+    "\n",
+    "    - fill in md files\n",
+    "    - Dockerfile\n",
+    "    - .github/workflows/publish_docker_image.yml\n",
+    "\n",
+    "\n",
     "5. Add the data analysis as a literate code document\n",
     "6. Make the computation environment reproducible through containerization with Docker\n",
     "\n",
@@ -79,11 +87,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "--------------------\n",
+    "\n",
+    "<h2> Code:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data from https://archive-beta.ics.uci.edu/ml/datasets/census+income"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# add script to download the data automatically\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
