--- a/analyze_census_data.ipynb
+++ b/analyze_census_data.ipynb
@@ -333,16 +333,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1efbc1eef10>]"
+       "[<matplotlib.lines.Line2D at 0x1efbd42ec10>]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     },
