--- a/analyze_census_data.ipynb
+++ b/analyze_census_data.ipynb
@@ -4,33 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Milestone 1:\n",
-    "\n",
-    "from https://ubc-dsci.github.io/dsci-310-student/milestone1.html\n",
-    "\n",
-    "1. Draft a team work contract\n",
-    "2. Set-up a public GitHub repository (or a private one, adding ttimbers and GiuseppeTT as collaborators with read access) under the DSCI-310 organization\n",
-    "3. Select a data analysis project to work with\n",
-    "4. Create an appropriate file and directory structure for a data analysis project\n",
-    "\n",
-    "    - fill in md files\n",
-    "    - Dockerfile\n",
-    "    - .github/workflows/publish_docker_image.yml\n",
-    "\n",
-    "\n",
-    "5. Add the data analysis as a literate code document\n",
-    "6. Make the computation environment reproducible through containerization with Docker\n",
-    "\n",
-    "\n",
-    "part 5 here:\n",
-    "\n",
-    "-----------------------------"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<h1> Analyzing Education's effect on Capital Gain </h1>"
    ]
   },
@@ -56,35 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3> Methods & Results: </h3>\n",
-    "- describe in written english the methods you used to perform your analysis from beginning to end that narrates the code the does the analysis.\n",
-    "- your report should include code which:\n",
-    "- loads data from the original source on the web\n",
-    "- wrangles and cleans the data from it’s original (downloaded) format to the format necessary for the planned classification or clustering analysis\n",
-    "- performs a summary of the data set that is relevant for exploratory data analysis related to the planned classification analysis\n",
-    "- creates a visualization of the dataset that is relevant for exploratory data analysis related to the planned classification analysis\n",
-    "- performs classification or regression analysis\n",
-    "- creates a visualization of the result of the analysis\n",
-    "- note: all tables and figure should have a figure/table number and a legend"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h3> Discussion: </h3>\n",
-    "- summarize what you found\n",
-    "- discuss whether this is what you expected to find?\n",
-    "- discuss what impact could such findings have?\n",
-    "- discuss what future questions could this lead to?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h3> References: </h3>\n",
-    "- at least 4 citations relevant to the project (format is your choose, just be consistent across the references)."
+    "<h3> Methods & Results: </h3>"
    ]
   },
   {
@@ -368,6 +313,25 @@
     "\n",
     "plt.scatter(ed,gains)\n",
     "plt.plot(ed, m*ed+b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3> Discussion: </h3>\n",
+    "- summarize what you found\n",
+    "- discuss whether this is what you expected to find?\n",
+    "- discuss what impact could such findings have?\n",
+    "- discuss what future questions could this lead to?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3> References: </h3>\n",
+    "- at least 4 citations relevant to the project (format is your choose, just be consistent across the references)."
    ]
   },
   {
