--- a/analyze_census_data.ipynb
+++ b/analyze_census_data.ipynb
@@ -248,11 +248,10 @@
     }
    ],
    "source": [
-    "# add script to download the data automatically,\n",
-    "# probably too much work to get names from names file\n",
-    "\n",
+    "# load data\n",
     "data = pd.read_csv('data/adult.data', header=None)\n",
     "\n",
+    "# prepare column names\n",
     "names = ['age',\n",
     "        'workclass',\n",
     "        'fnlwgt',\n",
@@ -269,11 +268,14 @@
     "        'native-country',\n",
     "        'income']\n",
     "\n",
+    "# assign column names\n",
     "data.columns = names\n",
     "\n",
+    "# convert income boolean to 0/1 to make analyses easier\n",
     "data['income_bool'] = data['income'] == \" <=50K\"\n",
     "data['income_bool'] = data['income_bool'].astype(int)\n",
     "\n",
+    "# view examples in dataset\n",
     "data.head()"
    ]
   },
@@ -306,11 +308,14 @@
     }
    ],
    "source": [
+    "# isolate variables to analyze\n",
     "ed = data['education-num']\n",
     "gains = data['capital-gain']\n",
     "\n",
+    "# run polynomial regression to find line coefficients\n",
     "m, b = np.polyfit(ed, gains, 1)\n",
     "\n",
+    "# plot line calculated above\n",
     "plt.scatter(ed,gains)\n",
     "plt.plot(ed, m*ed+b)"
    ]
@@ -331,7 +336,14 @@
    "metadata": {},
    "source": [
     "<h3> References: </h3>\n",
-    "- at least 4 citations relevant to the project (format is your choose, just be consistent across the references)."
+    "\n",
+    "Cook, Catherine R., and Marylouise Fennell. \"Capital Gains: Surviving in an Increasingly For-Profit World.\" Presidency 4.1 (2001): 28-33.\n",
+    "\n",
+    "Fagereng, Andreas, et al. Saving behavior across the wealth distribution: The importance of capital gains. No. w26588. National Bureau of Economic Research, 2019.\n",
+    "\n",
+    "Heckman, James J. \"The economics of inequality: The value of early childhood education.\" American Educator 35.1 (2011): 31.\n",
+    "\n",
+    "Wind, Barend, and Lina Hedman. \"The uneven distribution of capital gains in times of socio-spatial inequality: Evidence from Swedish housing pathways between 1995 and 2010.\" Urban Studies 55.12 (2018): 2721-2742.\n"
    ]
   },
   {
