--- a/analyze_census_data.ipynb
+++ b/analyze_census_data.ipynb
@@ -325,10 +325,12 @@
    "metadata": {},
    "source": [
     "<h3> Discussion: </h3>\n",
-    "- summarize what you found\n",
-    "- discuss whether this is what you expected to find?\n",
-    "- discuss what impact could such findings have?\n",
-    "- discuss what future questions could this lead to?"
+    "\n",
+    "Looking at our graph above, we can that there is a positive correlation between education level and capital gain. There are many explanations on why there is a positive correlation. The most basic one would be that the higher level of education you obtain, the higher the income, hence you can invest more of the money which leads to higher capital gains. However, Catherine R. states in her publication of Capital Gains: Surviving in an Increasingly For-Profit World, that the positive correlation we see above may be because people with more money can afford more education. This would mean that education level is not causing a higher level of capital gains, but that a higher level of capital gains makes school more affordable hence increases education level. The positive correlation we found above does not conclude a causal relationship. <br>\n",
+    "\n",
+    "Overall, the result found was expected as it is predicted that with further education you make more money that can be used on capital gains, or, with more capital gains you usually have more money and hence can afford more education. Both these reasons explain a positive correlation. <br>\n",
+    "\n",
+    "If we try to decrease bias in our analysis, we can try to find a causal effect in our data and see if higher education causes a growth in capital gains or if there is only a positive relation and the causation is due to something else (perhaps a third variable). However, demonstr the positive correlation allows us to grow on our project to find a causation. We now know that people with higher education level tend to have more capital gains and that can be used to find why it happens. <br>\n"
    ]
   },
   {
@@ -356,7 +358,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -370,7 +372,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
