--- a/analyze_census_data.ipynb
+++ b/analyze_census_data.ipynb
@@ -451,12 +451,46 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "preschool 33.98204328850985\n",
+      "Bachelors: 42.51278728462039\n",
+      "Doctorates: 44.64547328364802\n",
+      "Infer three doctorates: 47.48905461568487\n"
+     ]
+    }
+   ],
+   "source": [
+    "# predictions:\n",
+    "\n",
+    "# Only preschool\n",
+    "print(\"preschool\", m*1+b)\n",
+    "\n",
+    "# bachelors\n",
+    "print(\"Bachelors:\", m*13+b)\n",
+    "\n",
+    "# doctorates\n",
+    "print(\"Doctorates:\", m*16+b)\n",
+    "\n",
+    "# 1 education-num is close to 2 years in school at the end of the scale. So, 20 is equivalent to 3 doctorates:\n",
+    "print(\"Infer three doctorates:\", m*20+b)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "<h3> Discussion: </h3>\n",
     "\n",
-    "Looking at our graph above, we can that there is a positive correlation between education level and hours worked. There are many possible explanations as to why this exists. One possibility is that this is caused by students still in school, who have low education levels and would only work part time. Another is that jobs with lower education requirements do not allow for advancement to full time work, or that jobs with higher requirements are more demanding. \n",
+    "Looking at our graph above, we can that there is a positive correlation between education level and hours worked. Someone with minimal education would likely not have a full time job, and people with bachelors or doctorates tend to work slightly more (This could be due to most working exactly 40, and some working many more). Following the trend to a higher number like 20, a rough equivalent of 3 PhDs, \n",
+    "\n",
+    "There are many possible explanations as to why this exists. One possibility is that this is caused by students still in school, who have low education levels and would only work part time. Another is that jobs with lower education requirements do not allow for advancement to full time work, or that jobs with higher requirements are more demanding. \n",
     "\n",
     "Analyzing other variables in this dataset such as age could offer hints as to which explanation is correct. To be certain and to distinguish if this is truly causation or just correlation would likely require gathering more detailed data from other sources."
    ]
