--- a/analyze_census_data.ipynb
+++ b/analyze_census_data.ipynb
@@ -63,7 +63,10 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# our functions, in Python folder\n",
+    "from Python.regression import regression"
    ]
   },
   {
@@ -278,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +397,7 @@
        "16         Doctorate"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +418,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2bd6e281160>]"
+       "[<matplotlib.lines.Line2D at 0x27974900490>]"
       ]
      },
      "execution_count": 4,
@@ -443,7 +446,7 @@
     "hours = data['hours-per-week']\n",
     "\n",
     "# run polynomial regression to find best linear equation coefficients\n",
-    "m, b = np.polyfit(ed, hours, 1)\n",
+    "m, b = regression(ed, hours)\n",
     "\n",
     "# plot line calculated above\n",
     "plt.scatter(ed,hours)\n",
@@ -452,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
