--- a/analyze_census_data.ipynb
+++ b/analyze_census_data.ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "<h3> Summary: </h3>\n",
-    "Our group aims to analyze and determine the correlation between the number of years an individual spends in school compared to how long they spend working. We perform a linear regression analysis to find the relationship that holds between the two."
+    "Our group aims to analyze and determine the correlation between the number of years an individual spends in school compared to how long they spend working every week. We download and clean the data, then perform a linear regression analysis to find the relationship that holds between the two."
    ]
   },
   {
@@ -22,7 +22,7 @@
     "<h3> Introduction: </h3>\n",
     "Education is often seen as a gateway to greater understanding of the world; it is also seen as a way to gain freedom from having to work low paying jobs to pay living expenses. We aim to determine the extent of this view and track how these expectations work in reality. We also use our results to predict the number of hours worked with different kinds of higher education degrees.\n",
     "\n",
-    "For this project, we use the \"Census Income\" dataset from the UC Irvine Machine Learning Repository, representing data from the 1994 US Census."
+    "For this project, we use the \"Census Income\" dataset from the UC Irvine Machine Learning Repository, representing data from the 1994 US Census. For more details, see the original source here: https://archive-beta.ics.uci.edu/ml/datasets/adult"
    ]
   },
   {
@@ -52,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We use the pandas library for storing and processing data, the numpy data for more detailed analytical functions, and the matplotlib library to plot our findings."
+    "We use the pandas library for storing and processing data, the numpy data for more detailed analytical functions, and the matplotlib library to plot our findings. We inlude several functions we created in the Python folder."
    ]
   },
   {
@@ -66,7 +66,9 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# our functions, in Python folder\n",
-    "from Python.regression import regression"
+    "from Python.regression import regression\n",
+    "from Python.filter import filter as fil\n",
+    "from Python.remove_column import remove_column"
    ]
   },
   {
@@ -80,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,9 +95,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Ryan\\Documents\\GitHub\\DSCI-310-Group-3\\Python\\remove_column.py:17: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only.\n",
+      "  return df.drop(column_name, 1, inplace=False)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -119,14 +129,11 @@
        "      <th></th>\n",
        "      <th>age</th>\n",
        "      <th>workclass</th>\n",
-       "      <th>fnlwgt</th>\n",
        "      <th>education</th>\n",
        "      <th>education-num</th>\n",
        "      <th>marital-status</th>\n",
        "      <th>occupation</th>\n",
        "      <th>relationship</th>\n",
-       "      <th>race</th>\n",
-       "      <th>sex</th>\n",
        "      <th>capital-gain</th>\n",
        "      <th>capital-loss</th>\n",
        "      <th>hours-per-week</th>\n",
@@ -139,14 +146,11 @@
        "      <th>0</th>\n",
        "      <td>39</td>\n",
        "      <td>State-gov</td>\n",
-       "      <td>77516</td>\n",
        "      <td>Bachelors</td>\n",
        "      <td>13</td>\n",
        "      <td>Never-married</td>\n",
        "      <td>Adm-clerical</td>\n",
        "      <td>Not-in-family</td>\n",
-       "      <td>White</td>\n",
-       "      <td>Male</td>\n",
        "      <td>2174</td>\n",
        "      <td>0</td>\n",
        "      <td>40</td>\n",
@@ -157,14 +161,11 @@
        "      <th>1</th>\n",
        "      <td>50</td>\n",
        "      <td>Self-emp-not-inc</td>\n",
-       "      <td>83311</td>\n",
        "      <td>Bachelors</td>\n",
        "      <td>13</td>\n",
        "      <td>Married-civ-spouse</td>\n",
        "      <td>Exec-managerial</td>\n",
        "      <td>Husband</td>\n",
-       "      <td>White</td>\n",
-       "      <td>Male</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>13</td>\n",
@@ -175,14 +176,11 @@
        "      <th>2</th>\n",
        "      <td>38</td>\n",
        "      <td>Private</td>\n",
-       "      <td>215646</td>\n",
        "      <td>HS-grad</td>\n",
        "      <td>9</td>\n",
        "      <td>Divorced</td>\n",
        "      <td>Handlers-cleaners</td>\n",
        "      <td>Not-in-family</td>\n",
-       "      <td>White</td>\n",
-       "      <td>Male</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>40</td>\n",
@@ -193,14 +191,11 @@
        "      <th>3</th>\n",
        "      <td>53</td>\n",
        "      <td>Private</td>\n",
-       "      <td>234721</td>\n",
        "      <td>11th</td>\n",
        "      <td>7</td>\n",
        "      <td>Married-civ-spouse</td>\n",
        "      <td>Handlers-cleaners</td>\n",
        "      <td>Husband</td>\n",
-       "      <td>Black</td>\n",
-       "      <td>Male</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>40</td>\n",
@@ -211,14 +206,11 @@
        "      <th>4</th>\n",
        "      <td>28</td>\n",
        "      <td>Private</td>\n",
-       "      <td>338409</td>\n",
        "      <td>Bachelors</td>\n",
        "      <td>13</td>\n",
        "      <td>Married-civ-spouse</td>\n",
        "      <td>Prof-specialty</td>\n",
        "      <td>Wife</td>\n",
-       "      <td>Black</td>\n",
-       "      <td>Female</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>40</td>\n",
@@ -230,29 +222,29 @@
        "</div>"
       ],
       "text/plain": [
-       "   age          workclass  fnlwgt   education  education-num  \\\n",
-       "0   39          State-gov   77516   Bachelors             13   \n",
-       "1   50   Self-emp-not-inc   83311   Bachelors             13   \n",
-       "2   38            Private  215646     HS-grad              9   \n",
-       "3   53            Private  234721        11th              7   \n",
-       "4   28            Private  338409   Bachelors             13   \n",
+       "   age          workclass   education  education-num       marital-status  \\\n",
+       "0   39          State-gov   Bachelors             13        Never-married   \n",
+       "1   50   Self-emp-not-inc   Bachelors             13   Married-civ-spouse   \n",
+       "2   38            Private     HS-grad              9             Divorced   \n",
+       "3   53            Private        11th              7   Married-civ-spouse   \n",
+       "4   28            Private   Bachelors             13   Married-civ-spouse   \n",
        "\n",
-       "        marital-status          occupation    relationship    race      sex  \\\n",
-       "0        Never-married        Adm-clerical   Not-in-family   White     Male   \n",
-       "1   Married-civ-spouse     Exec-managerial         Husband   White     Male   \n",
-       "2             Divorced   Handlers-cleaners   Not-in-family   White     Male   \n",
-       "3   Married-civ-spouse   Handlers-cleaners         Husband   Black     Male   \n",
-       "4   Married-civ-spouse      Prof-specialty            Wife   Black   Female   \n",
+       "           occupation    relationship  capital-gain  capital-loss  \\\n",
+       "0        Adm-clerical   Not-in-family          2174             0   \n",
+       "1     Exec-managerial         Husband             0             0   \n",
+       "2   Handlers-cleaners   Not-in-family             0             0   \n",
+       "3   Handlers-cleaners         Husband             0             0   \n",
+       "4      Prof-specialty            Wife             0             0   \n",
        "\n",
-       "   capital-gain  capital-loss  hours-per-week  native-country  income  \n",
-       "0          2174             0              40   United-States   <=50K  \n",
-       "1             0             0              13   United-States   <=50K  \n",
-       "2             0             0              40   United-States   <=50K  \n",
-       "3             0             0              40   United-States   <=50K  \n",
-       "4             0             0              40            Cuba   <=50K  "
+       "   hours-per-week  native-country  income  \n",
+       "0              40   United-States   <=50K  \n",
+       "1              13   United-States   <=50K  \n",
+       "2              40   United-States   <=50K  \n",
+       "3              40   United-States   <=50K  \n",
+       "4              40            Cuba   <=50K  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,6 +273,9 @@
     "# assign column names\n",
     "data.columns = names\n",
     "\n",
+    "# drop some unused columns\n",
+    "data = remove_column(data, [\"race\", \"sex\", \"fnlwgt\"])\n",
+    "\n",
     "# view examples in dataset\n",
     "data.head()"
    ]
@@ -294,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +405,7 @@
        "16         Doctorate"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,16 +420,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x27974900490>]"
+       "[<matplotlib.lines.Line2D at 0x1776ef01be0>]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -468,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
