Added a little to discussion

--- a/docs/analyze_census_data.ipynb
+++ b/docs/analyze_census_data.ipynb
@@ -503,7 +503,9 @@
     "\n",
     "There are many possible explanations as to why this exists. One possibility is that this is caused by students still in school, who have low education levels and would only work part time. Another is that jobs with lower education requirements do not allow for advancement to full time work, or that jobs with higher requirements are more demanding. \n",
     "\n",
-    "Analyzing other variables in this dataset such as age could offer hints as to which explanation is correct. To be certain and to distinguish if this is truly causation or just correlation would likely require gathering more detailed data from other sources."
+    "However we can also see that our predictive model is inaccurate as the model predicts that pre-school kids work 33.98 hours  per week. We know that this is incorrect. \n",
+    "\n",
+    "Analyzing other variables in this data-set such as age could offer hints as to which explanation is correct. To be certain and to distinguish if this is truly causation or just correlation would likely require gathering more detailed data from other sources."
    ]
   },
   {
