--- a/docs/analyze_census_data.ipynb
+++ b/docs/analyze_census_data.ipynb
@@ -503,7 +503,7 @@
     "\n",
     "There are many possible explanations as to why this exists. One possibility is that this is caused by students still in school, who have low education levels and would only work part time. Another is that jobs with lower education requirements do not allow for advancement to full time work, or that jobs with higher requirements are more demanding. \n",
     "\n",
-    "However we can also see that our predictive model is inaccurate as the model predicts that pre-school kids work 33.98 hours  per week. We know that this is incorrect. \n",
+    "However we can also see that our predictive model is misleading as the model predicts that pre-school kids work 33.98 hours  per week. We know that this is incorrect. This does not mean that people in pre-school work 33.98 hours a week but that people that only completed pre-school and nothing else sometime in the past now work that many hours. \n",
     "\n",
     "Analyzing other variables in this data-set such as age could offer hints as to which explanation is correct. To be certain and to distinguish if this is truly causation or just correlation would likely require gathering more detailed data from other sources."
    ]
