--- a/docs/analyze_census_data.ipynb
+++ b/docs/analyze_census_data.ipynb
@@ -427,7 +427,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1ccceb31f40>]"
+       "[<matplotlib.lines.Line2D at 0x147e80d0f40>]"
       ]
      },
      "execution_count": 5,
@@ -496,279 +496,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>age</th>\n",
-       "      <th>workclass</th>\n",
-       "      <th>education</th>\n",
-       "      <th>education-num</th>\n",
-       "      <th>marital-status</th>\n",
-       "      <th>occupation</th>\n",
-       "      <th>relationship</th>\n",
-       "      <th>capital-gain</th>\n",
-       "      <th>capital-loss</th>\n",
-       "      <th>hours-per-week</th>\n",
-       "      <th>native-country</th>\n",
-       "      <th>income</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>112</th>\n",
-       "      <td>56</td>\n",
-       "      <td>Self-emp-not-inc</td>\n",
-       "      <td>HS-grad</td>\n",
-       "      <td>9</td>\n",
-       "      <td>Married-civ-spouse</td>\n",
-       "      <td>Other-service</td>\n",
-       "      <td>Husband</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1887</td>\n",
-       "      <td>50</td>\n",
-       "      <td>Canada</td>\n",
-       "      <td>&gt;50K</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>266</th>\n",
-       "      <td>19</td>\n",
-       "      <td>?</td>\n",
-       "      <td>Some-college</td>\n",
-       "      <td>10</td>\n",
-       "      <td>Never-married</td>\n",
-       "      <td>?</td>\n",
-       "      <td>Own-child</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>24</td>\n",
-       "      <td>Canada</td>\n",
-       "      <td>&lt;=50K</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>593</th>\n",
-       "      <td>31</td>\n",
-       "      <td>Private</td>\n",
-       "      <td>Bachelors</td>\n",
-       "      <td>13</td>\n",
-       "      <td>Married-civ-spouse</td>\n",
-       "      <td>Prof-specialty</td>\n",
-       "      <td>Husband</td>\n",
-       "      <td>7688</td>\n",
-       "      <td>0</td>\n",
-       "      <td>40</td>\n",
-       "      <td>Canada</td>\n",
-       "      <td>&gt;50K</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1051</th>\n",
-       "      <td>53</td>\n",
-       "      <td>Self-emp-not-inc</td>\n",
-       "      <td>Bachelors</td>\n",
-       "      <td>13</td>\n",
-       "      <td>Married-civ-spouse</td>\n",
-       "      <td>Sales</td>\n",
-       "      <td>Husband</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>40</td>\n",
-       "      <td>Canada</td>\n",
-       "      <td>&gt;50K</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1314</th>\n",
-       "      <td>32</td>\n",
-       "      <td>Private</td>\n",
-       "      <td>Some-college</td>\n",
-       "      <td>10</td>\n",
-       "      <td>Married-civ-spouse</td>\n",
-       "      <td>Handlers-cleaners</td>\n",
-       "      <td>Husband</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>50</td>\n",
-       "      <td>Canada</td>\n",
-       "      <td>&gt;50K</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30288</th>\n",
-       "      <td>40</td>\n",
-       "      <td>Private</td>\n",
-       "      <td>HS-grad</td>\n",
-       "      <td>9</td>\n",
-       "      <td>Separated</td>\n",
-       "      <td>Exec-managerial</td>\n",
-       "      <td>Unmarried</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>40</td>\n",
-       "      <td>Canada</td>\n",
-       "      <td>&lt;=50K</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30623</th>\n",
-       "      <td>72</td>\n",
-       "      <td>?</td>\n",
-       "      <td>Some-college</td>\n",
-       "      <td>10</td>\n",
-       "      <td>Married-civ-spouse</td>\n",
-       "      <td>?</td>\n",
-       "      <td>Husband</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>32</td>\n",
-       "      <td>Canada</td>\n",
-       "      <td>&lt;=50K</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30969</th>\n",
-       "      <td>51</td>\n",
-       "      <td>Private</td>\n",
-       "      <td>Assoc-voc</td>\n",
-       "      <td>11</td>\n",
-       "      <td>Married-civ-spouse</td>\n",
-       "      <td>Craft-repair</td>\n",
-       "      <td>Husband</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>40</td>\n",
-       "      <td>Canada</td>\n",
-       "      <td>&gt;50K</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32093</th>\n",
-       "      <td>62</td>\n",
-       "      <td>?</td>\n",
-       "      <td>Assoc-voc</td>\n",
-       "      <td>11</td>\n",
-       "      <td>Married-civ-spouse</td>\n",
-       "      <td>?</td>\n",
-       "      <td>Husband</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>40</td>\n",
-       "      <td>Canada</td>\n",
-       "      <td>&lt;=50K</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32112</th>\n",
-       "      <td>32</td>\n",
-       "      <td>Self-emp-inc</td>\n",
-       "      <td>Bachelors</td>\n",
-       "      <td>13</td>\n",
-       "      <td>Married-civ-spouse</td>\n",
-       "      <td>Craft-repair</td>\n",
-       "      <td>Husband</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>50</td>\n",
-       "      <td>Canada</td>\n",
-       "      <td>&lt;=50K</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>121 rows × 12 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       age          workclass      education  education-num  \\\n",
-       "112     56   Self-emp-not-inc        HS-grad              9   \n",
-       "266     19                  ?   Some-college             10   \n",
-       "593     31            Private      Bachelors             13   \n",
-       "1051    53   Self-emp-not-inc      Bachelors             13   \n",
-       "1314    32            Private   Some-college             10   \n",
-       "...    ...                ...            ...            ...   \n",
-       "30288   40            Private        HS-grad              9   \n",
-       "30623   72                  ?   Some-college             10   \n",
-       "30969   51            Private      Assoc-voc             11   \n",
-       "32093   62                  ?      Assoc-voc             11   \n",
-       "32112   32       Self-emp-inc      Bachelors             13   \n",
-       "\n",
-       "            marital-status          occupation relationship  capital-gain  \\\n",
-       "112     Married-civ-spouse       Other-service      Husband             0   \n",
-       "266          Never-married                   ?    Own-child             0   \n",
-       "593     Married-civ-spouse      Prof-specialty      Husband          7688   \n",
-       "1051    Married-civ-spouse               Sales      Husband             0   \n",
-       "1314    Married-civ-spouse   Handlers-cleaners      Husband             0   \n",
-       "...                    ...                 ...          ...           ...   \n",
-       "30288            Separated     Exec-managerial    Unmarried             0   \n",
-       "30623   Married-civ-spouse                   ?      Husband             0   \n",
-       "30969   Married-civ-spouse        Craft-repair      Husband             0   \n",
-       "32093   Married-civ-spouse                   ?      Husband             0   \n",
-       "32112   Married-civ-spouse        Craft-repair      Husband             0   \n",
-       "\n",
-       "       capital-loss  hours-per-week native-country  income  \n",
-       "112            1887              50         Canada    >50K  \n",
-       "266               0              24         Canada   <=50K  \n",
-       "593               0              40         Canada    >50K  \n",
-       "1051              0              40         Canada    >50K  \n",
-       "1314              0              50         Canada    >50K  \n",
-       "...             ...             ...            ...     ...  \n",
-       "30288             0              40         Canada   <=50K  \n",
-       "30623             0              32         Canada   <=50K  \n",
-       "30969             0              40         Canada    >50K  \n",
-       "32093             0              40         Canada   <=50K  \n",
-       "32112             0              50         Canada   <=50K  \n",
-       "\n",
-       "[121 rows x 12 columns]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data[data['native-country'].str.contains('Canada')]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1cccec69c70>]"
+       "[<matplotlib.lines.Line2D at 0x147e81f8e80>]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -807,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -839,16 +576,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1cccef09850>]"
+       "[<matplotlib.lines.Line2D at 0x147e827e760>]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -885,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -927,7 +664,7 @@
     "\n",
     "However we can also see that our predictive model is misleading as the model predicts that pre-school kids work 33.98 hours  per week. We know that this is incorrect. This does not mean that people in pre-school work 33.98 hours a week but that people that only completed pre-school and nothing else sometime in the past now work that many hours. \n",
     "\n",
-    "Looking at the graphs for Canada and USA only, we can see that there actually is a negative correlation between hours worked and education level. This can be because at higher education levels you may still be spending a lot of time studying rather than learning hence your hours stay the same. The working hours for education level are almost consistent at 40hrs which is the standard full time job in Canada and USA hence \n",
+    "Looking at the graphs for Canada and USA only, we can see that there actually is a negative correlation between hours worked and education level. This can be because at higher education levels you may still be spending a lot of time studying rather than learning hence your hours stay the same. The working hours for education level are almost consistent at 40hrs which is the standard full time job in Canada and USA hence it makes sense that it is consistent with all education levels as it just means everyone is working standard full time hours.\n",
     "\n",
     "Analyzing other variables in this data-set such as age could offer hints as to which explanation is correct. To be certain and to distinguish if this is truly causation or just correlation would likely require gathering more detailed data from other sources."
    ]
@@ -947,6 +684,13 @@
     "Heckman, James J. \"The economics of inequality: The value of early childhood education.\" American Educator 35.1 (2011): 31.\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
