--- a/docs/analyze_census_data.ipynb
+++ b/docs/analyze_census_data.ipynb
@@ -430,6 +430,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Education Numbers Meaning**:\n",
+    "\n",
+    "| Number | Meaning |\n",
+    "|-|-|\n",
+    "|**1**|Preschool|\n",
+    "|**2**|1st-4th|\n",
+    "|**3**|5th-6th|\n",
+    "|**3**|7th-8th|\n",
+    "|**3**|9th|\n",
+    "||10th|\n",
+    "|**3**|11th|\n",
+    "|**3**|12th|\n",
+    "|**3**|HS-grad|\n",
+    "|**3**|Some-college|\n",
+    "|**3**|Assoc-voc|\n",
+    "|**3**|Assoc-acdm|\n",
+    "|**3**|Bachelors|\n",
+    "|**3**|Masters|\n",
+    "|15|Prof-school|\n",
+    "|16|Doctorate|"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -705,7 +731,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -719,7 +745,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
