Added markdown table

--- a/docs/analyze_census_data.ipynb
+++ b/docs/analyze_census_data.ipynb
@@ -440,19 +440,19 @@
     "|**1**|Preschool|\n",
     "|**2**|1st-4th|\n",
     "|**3**|5th-6th|\n",
-    "|**3**|7th-8th|\n",
-    "|**3**|9th|\n",
-    "||10th|\n",
-    "|**3**|11th|\n",
-    "|**3**|12th|\n",
-    "|**3**|HS-grad|\n",
-    "|**3**|Some-college|\n",
-    "|**3**|Assoc-voc|\n",
-    "|**3**|Assoc-acdm|\n",
-    "|**3**|Bachelors|\n",
-    "|**3**|Masters|\n",
-    "|15|Prof-school|\n",
-    "|16|Doctorate|"
+    "|**4**|7th-8th|\n",
+    "|**5**|9th|\n",
+    "|**6**|10th|\n",
+    "|**7**|11th|\n",
+    "|**8**|12th|\n",
+    "|**9**|HS-grad|\n",
+    "|**10**|Some-college|\n",
+    "|**11**|Assoc-voc|\n",
+    "|**12**|Assoc-acdm|\n",
+    "|**13**|Bachelors|\n",
+    "|**14**|Masters|\n",
+    "|**15**|Prof-school|\n",
+    "|**16**|Doctorate|"
    ]
   },
   {
