fixed minor error in cell

--- a/docs/analyze_census_data.ipynb
+++ b/docs/analyze_census_data.ipynb
@@ -129,7 +129,8 @@
     "height: 300px\n",
     "name: usa_plot\n",
     "---\n",
-    "Level of Education vs Hours Worked per Week (Americans only)"
+    "Level of Education vs Hours Worked per Week (Americans only)\n",
+    "```"
    ]
   },
   {
